26.8.2014

* fix alarmmanager (alarms) now use ELAPSED_REALTIME_WAKEUP instead of RTC_WAKEUP (first one handles deep sleep better)
* fix after finishing call, volumes and RINGER_MODE now switched back to previous state
* fixed values directory again from android string to lang 2string values-XX
+ added languages: Arabic, Swedish, Spanish, Dutch, Slovenian, Serbian (Latin), German, Russian
* FIXING when creating alarms, editing condition will ALWAYS make different ID (meaning multiple alarms)
  http://stackoverflow.com/questions/25504606/alarmmanager-with-elapsed-realtime-wakeup-not-updating-pendingintent


25.8.2014

* changed values-sv to values-sv-rSE (Android Locale identifier used to name "values-" directories)
* added last string before release version to strings.
* updated about page
* fixed strings bugs
* created welcome to sfen dialog with giving option to create some simple events/conditions


24.8.2014

* fixed adding new condition (Location) with Location disabled in system settings will trigger exception
* 2x fixed condition "event conditions FALSE".
* fixed timerange condition. what if end time was smaller than start time. meaning end time is next day. but what if current time is after/before midnight?
* about page is again scrollable
* created donation dialog (after 5th run). no other nagging windows will appear.


23.8.2014

+ about page created
* fixed toggling ringer mode when activating profile. (silent, vibrating, normal)
* fixed timerange dialog - scrollable
+ added dialog when pressing back on event or profile window if user didn't saved it before.


22.8.2014

* fixed location enter/leave bug where 2 different locations could both be active at the same time (ty @ron_e)
* added another bluetooth reciever: ACTION_ACL_DISCONNECT_REQUESTED